--- a/analysis/reactionTime.Rmd
+++ b/analysis/reactionTime.Rmd
@@ -1,10 +1,22 @@
+---
+title: "reactionTime"
+author: "Dan Birman"
+date: "January 22, 2015"
+output: html_document
+---
+
+```{r}
+library(ggplot2)
 library(dplyr)
 library(tidyr)
-
+library(lme4)
 cleanup <- function(data) {
   data = data %>% filter(!is.nan(response))
   data
 }
+```
+
+
 
 filesToLoad = 5:37
 
