--- a/analysis/cohCon_analyze.Rmd
+++ b/analysis/cohCon_analyze.Rmd
@@ -15,8 +15,8 @@ library(MASS)
 
 ```{r}
 
-allThresh25 = getSubjThresholdPlot('scan','s025')
-allThresh300 = getSubjThresholdPlot('scan','s300')
+allThresh25 = getSubjThresholdPlot('behav','s025')
+allThresh300 = getSubjThresholdPlot('behav','s300')
 
 aT25 = cbind(allThresh25,subj='25')
 aT300 = cbind(allThresh300,subj='300')
@@ -33,14 +33,15 @@ allT = allThresh %>%
 
 ```{r}
 
-figFolder = '/Users/dan/proj/att_awe/analysis/figures/scan/'
+figFolder = '/Users/dan/proj/att_awe/analysis/figures/behav/'
 pdf(file=sprintf('%s/thresholdPlot_Across.pdf',figFolder))
 allT %>%
-  filter(catch=='Cued') %>%
+  filter(subj==300) %>%
   ggplot(data=.,aes(pedVal,muAcross,color=task,linetype=catch)) +
-    geom_line(size=3) +
+    geom_point(size=4) +
+    geom_line(size=.5) +
     #geom_line(aes(pedVal,mu,fill=subj,color=task,linetype=catch),alpha=.25) +
-    geom_errorbar(aes(ymin=muAcross-ciAcross,ymax=muAcross+ciAcross),size=2,width=0) +
+    geom_errorbar(aes(ymin=muAcross-ciAcross,ymax=muAcross+ciAcross),size=1,width=0) +
     theme_bw() +
     ylab('Threshold') +
     xlab('Pedestal (%)') +
@@ -132,13 +133,15 @@ getSubjThresholdPlot = function(type,subj) {
     ungroup() %>%
     mutate(task=factor(task,levels=c(1,2),labels=c('Coherence','Contrast')))
   cat = cat %>%
-    filter(mu < 1, mu > 0)
+    filter(mu < 5, mu > 0)
   fname=sprintf('%s/thresholdPlot_%s.pdf',figFolder,subj)
   g = ggplot() +
-    geom_line(data=main,aes(pedVal,mu,color=task),size=3) +
+    geom_point(size=4) +
+    geom_line(data=main,aes(pedVal,mu,color=task),size=.5) +
     geom_errorbar(data=main,aes(pedVal,mu,color=task,ymin=mu-ci,ymax=mu+ci)) +
-    geom_line(data=cat,aes(pedVal,mu,color=task),linetype='dashed',size=2) +
-    geom_errorbar(data=cat,aes(pedVal,mu,color=task,ymin=mu-ci,ymax=mu+ci)) +
+    geom_point(data=cat,aes(pedVal,mu,color=task),size=4) +
+    geom_line(data=cat,aes(pedVal,mu,color=task),linetype='dashed',size=.5) +
+    geom_errorbar(data=cat,aes(pedVal,mu,color=task,ymin=mu-ci,ymax=mu+ci),size=1,width=0) +
     theme_bw() +
     scale_color_brewer(palette='Dark2') +
     scale_x_continuous(limits = c(0, .65)) +
