--- a/analysis/cohCon_analyze.Rmd
+++ b/analysis/cohCon_analyze.Rmd
@@ -32,26 +32,52 @@ allT = allThresh %>%
 ```
 
 ```{r}
-
+# 
 figFolder = '/Users/dan/proj/att_awe/analysis/figures/behav/'
-pdf(file=sprintf('%s/thresholdPlot_Across.pdf',figFolder))
+pdf(file=sprintf('%s/thresholdPlot_all.pdf',figFolder))
 allT %>%
-  filter(subj==300) %>%
-  ggplot(data=.,aes(pedVal,muAcross,color=task,linetype=catch)) +
-    geom_point(size=4) +
-    geom_line(size=.5) +
-    #geom_line(aes(pedVal,mu,fill=subj,color=task,linetype=catch),alpha=.25) +
-    geom_errorbar(aes(ymin=muAcross-ciAcross,ymax=muAcross+ciAcross),size=1,width=0) +
+  filter(catch=='Cued') %>%
+  ggplot(data=.) +
+    geom_point(aes(pedVal,muAcross,color=task,linetype=catch),size=4) +
+    geom_line(aes(pedVal,muAcross,color=task,linetype=catch),size=.5) +
+    geom_errorbar(aes(pedVal,muAcross,color=task,linetype=catch,ymin=muAcross-ciAcross,ymax=muAcross+ciAcross),size=1,width=0) +
+#     geom_point(data=sel,aes(pedVal,mu),size=4) +
+#     geom_line(data=sel,aes(pedVal,mu,color=task,linetype=catch),size=.5) +
     theme_bw() +
-    ylab('Threshold') +
-    xlab('Pedestal (%)') +
-    xlim(0,.7) +
-    ylim(-.1,.5) +
+    ylab('Diff at 80% Performance') +
+    xlab('Stimulus Contrast (%)') +
+    xlim(0,.65) +
+    ylim(0,.55) +
     theme(text = element_text(size=20)) +
-    scale_color_brewer(palette='Dark2')
+    scale_color_brewer(palette='Paired')
 #     coord_trans(xtrans = 'log10',ytrans = 'log10') +
 #     annotation_logticks(scaled=FALSE)
 dev.off()
+```
+
+```{r}
+# Jsut some temp stuff to generate plots of fake normal data
+x = seq(0,12.5,.01)
+y = dnorm(x,3,1)
+y2 = dnorm(x,9,1)
+ctheme = theme(axis.line=element_blank(),
+      axis.text.x=element_blank(),
+      axis.text.y=element_blank(),
+      axis.ticks=element_blank(),
+      axis.title.x=element_blank(),
+      axis.title.y=element_blank(),
+      legend.position="none",
+      panel.background=element_blank(),
+      panel.border=element_blank(),
+      panel.grid.major=element_blank(),
+      panel.grid.minor=element_blank(),
+      plot.background=element_blank())
+d = data.frame(x=x,y=y,y2=y2)
+ggplot(d) +
+  geom_line(aes(x,y),size=2,color='orange') +
+  geom_line(aes(x,y2),size=2,color='purple') +
+  ctheme +
+  xlab('') + ylab('')
 ```
 
 
@@ -145,7 +171,7 @@ getSubjThresholdPlot = function(type,subj) {
     theme_bw() +
     scale_color_brewer(palette='Dark2') +
     scale_x_continuous(limits = c(0, .65)) +
-    scale_y_continuous(limits = c(0, .5))+
+    scale_y_continuous(limits = c(0, .6))+
     theme(text = element_text(size=20)) +
     xlab('Pedestal Value (%)') +
     ylab('Discrimination Threshold')
